# openbb-ibkr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
openbb_ibkr/: __init__.py  ibkr_router.py
openbb_ibkr/models/: market_data.py  response_models.py
openbb_ibkr/utils/: client.py  iv_fallback.py  options_signals.py
openbb_ibkr/workspace/: __init__.py  apps.json
tests/: conftest.py  test_import.py  test_options_signals.py  test_widget_config.py  test_workspace.py
