[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openbb-ibkr"
version = "0.1.2"
description = "Interactive Brokers provider extension for OpenBB Platform"
readme = "README.md"
license = "MIT"
keywords = ["openbb", "ibkr", "interactive-brokers", "trading", "finance", "portfolio"]
requires-python = ">=3.10"
authors = [
    {name = "Alwan Alkautsar"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "openbb>=4.0.0",
    "ib-insync>=0.9.86",
]

[project.optional-dependencies]
riskfolio = ["riskfolio-lib>=6.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/alwank/openbb-ibkr"
Repository = "https://github.com/alwank/openbb-ibkr"
Issues = "https://github.com/alwank/openbb-ibkr/issues"

[project.entry-points."openbb_provider_extension"]
ibkr = "openbb_ibkr:ibkr_provider"

[project.entry-points."openbb_core_extension"]
ibkr = "openbb_ibkr.ibkr_router:router"

[tool.setuptools]
packages = ["openbb_ibkr", "openbb_ibkr.models", "openbb_ibkr.utils"]

[tool.ruff]
line-length = 120
